[package]
name = "remolt-app"
version = "0.1.0"
authors = ["Will Duquette <will@wjduquette.com>"]
edition = "2021"
description = "Remolt Shell Application"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["language", "script", "scripting", "tcl"]

[dependencies]
remolt = { version = "0.1.0", path = "../molt" }
remolt-shell = { version = "0.1.0", path = "../molt-shell" }

[[bin]]
name = "remoltsh"
path = "src/main.rs"
